# Payment-Reconciliation-Engine

./: .gitignore  README.md  dashboard.py  main.py  payment_recon_primer.md  pyproject.toml  requirements.txt  scratch.py
data/: bank_statement.csv  gateway_transactions.csv  internal_ledger.csv
output/: .gitkeep
scripts/: generate_sample_data.py
src/: __init__.py  config.py
src/engine/: __init__.py  classifier.py  matcher.py  rules.py
src/ingestion/: __init__.py  loader.py  validator.py
src/models/: __init__.py  database.py  schemas.py
src/persistence/: __init__.py  db_manager.py  repository.py
src/reporting/: __init__.py  report_generator.py
src/reporting/templates/: recon_report.html
tests/: __init__.py  test_matcher.py
